--- a/src/pages/LoginPage/LoginForm.css
+++ b/src/pages/LoginPage/LoginForm.css
@@ -38,19 +38,68 @@ box-shadow:
 
 }
 
-.form-container p, .login-button{
+.form-container p,.login-button{
 margin: 10px;  
-
 display: flex;
 justify-content: center;
 align-items: center;
 height: 50px;
 }
 
-.form-select p{
+.form-select {
   border-bottom: 1px solid;
   border-radius: 10px;
   box-shadow: 10px 10px grey;
+  
+}
+.select-role-container{
+   border-bottom: 1px solid;
+  border-radius: 10px;
+  box-shadow: 10px 10px grey;
+}
+  .select-role-container p{
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+
+  }  
+  .select-role-container p button{
+    height: 100px;
+    margin-top: 10px;
+  } 
+  .select-role-container input{
+height: 30px;
+width: 200px;
+border: none;
+border-radius: 8px;
+  }    
+
+.branch-container p{
+  height: 120px;
+  display: flex;
+  flex-direction: column;
+}
+.branch-container input{
+  margin: 10px;
+  height: 30px;
+  width: 200px;
+  border: none;
+  border-radius: 8px;
+}
+.form-select button{
+  width: 100px;
+  height: 30px;
+  margin: 5px;
+  border:none;
+  border-radius: 8px;
+  color: white;
+  background: rgba(11, 105, 132, 0.689);
+  box-shadow: 6px 5px grey; 
+}
+.form-select button:hover{
+  cursor: pointer;
+  color: black;
+  background-color: white;
 }
 .form-input {
   border: none;
@@ -68,7 +117,7 @@ height: 50px;
  border-radius: 10px;
  border: none;
       background: rgba(11, 105, 132, 0.689);
-  box-shadow: 10px 10px grey;  
+  box-shadow: 8px 6px grey;  
 }
 
 .login-button button:hover{
