--- a/src/pages/LoginPage/LoginForm.css
+++ b/src/pages/LoginPage/LoginForm.css
@@ -1,5 +1,7 @@
-
 .container{
+  display: flex;
+}
+.sub-container{
   border-radius: 20px;
   width: 500px;
   display: flex;
@@ -72,7 +74,11 @@ height: 30px;
 width: 200px;
 border: none;
 border-radius: 8px;
-  }    
+  }  
+  
+  .select-role-container input:hover{
+    cursor: pointer;
+  }
 
 .branch-container p{
   height: 120px;
@@ -85,6 +91,10 @@ border-radius: 8px;
   width: 200px;
   border: none;
   border-radius: 8px;
+}
+
+.branch-container input:hover{
+  cursor: pointer;
 }
 .form-select button{
   width: 100px;
@@ -100,9 +110,10 @@ border-radius: 8px;
   cursor: pointer;
   color: black;
   background-color: white;
+  font-weight: bold;
 }
 .form-input {
-  border: none;
+  /* border: none; */
 }
 .form-input input{
   border: none;
@@ -124,4 +135,52 @@ border-radius: 8px;
   cursor: pointer;
   color: black;
   background-color: white;
+  font-weight: bold;
+}
+
+/* SELECT BRANCH */
+
+.branch-box{
+width: 200px;
+height: 350px;
+box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+    0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+    border-radius: 8px;
+}
+.branch-box h3{
+display: flex;
+justify-content: center;
+}
+.branch-list-container{
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.branch-box button{
+border: 1px solid;
+border-radius: 8px;
+color: white;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 100px;
+height: 20px;
+margin: 5px;
+background: rgba(21, 48, 137, 0.689);
+box-shadow: 6px 5px grey;
+
+
+
+}
+.branch-list-container :hover{
+ cursor: pointer;
+ background-color: white;
+ color: black;
+ font-weight: bold;
 }
