--- a/src/pages/LoginPage/LoginForm.css
+++ b/src/pages/LoginPage/LoginForm.css
@@ -1,4 +1,4 @@
-.container{
+.general-container{
   display: flex;
 }
 .sub-container{
@@ -151,6 +151,8 @@ box-shadow:
     0 41.8px 33.4px rgba(0, 0, 0, 0.086),
     0 100px 80px rgba(0, 0, 0, 0.12);
     border-radius: 8px;
+    position: fixed;
+    right: 80px;
 }
 .branch-box h3{
 display: flex;
@@ -160,6 +162,7 @@ justify-content: center;
 display: flex;
 flex-direction: column;
 align-items: center;
+
 }
 
 .branch-box button{
