--- a/src/components/sidebarComponent/sidebar.css
+++ b/src/components/sidebarComponent/sidebar.css
@@ -4,7 +4,8 @@
 }
 
 .sidebar-container{
-    background: rgba(128, 128, 128, 0.20);
+    /* background: rgba(128, 128, 128, 0.20); */
+    background-color: beige;
     width: 300px;
     border-radius: 15px;
     margin-top: 30px;
